# xtract

./: .dev_run.sh  .gitignore  Dockerfile  api.py  buildspec.yml  database.py  db_test.py  pyproject.toml  requirements.txt  stockdata.py  stockdata_service.py  stockdatamodel.py  test_stockdata_service.py  xtract.py  xtract_api_spec.yaml
api/: __init__.py  stockdata.py  stockinfo.py  xtract_api_spec.yaml
app/main/: __init__.py  config.py  xtract.py
app/test/: test_db.py  test_financial_api_modeling.py  test_stockdata_service.py
database/: base.py  database.py  stockdatamodel.py
db/: database.py  stockdatamodel.py
financial_api/: financial_api.py  financialmodelingprep.py
good_morning/: __init__.py  good_download.py  good_morning.py
migrations/: env.py
migrations/versions/: d458b6f977d4_.py
stockdata_service/: .~c9_invoke_iRqedf.py  stockdata_service.py  stockdata_service_old.py
test/: __init__.py  test_db.py  test_financial_api_modeling.py  test_stockdata_service.py
tests/: test_db.py  test_financial_api_modeling.py  test_stockdata_service.py
tmp/: AAPL_pe  AAPL_y  ACN_pe  HL_pe  INTC_pe  MO_pe  TGT_pe  TSCO_pe  aapl  aapl_yield
tmpold/: AAPL_stats
tmpold/AAPL/: company_key_metrics  dividend_history  financial_ratios  income_statement  profile
tmpold/ABBV/: company_key_metrics  dividend_history  financial_ratios  income_statement  profile
tmpold/ABT/: company_key_metrics  dividend_history  financial_ratios  (+2 more)
xtract/: __init__.py  config.py  xtract.py
xtract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
yahoo_reader/: yahoo_reader.py
(+409 files in other folders)
