[tool.poetry]
name = "xtract"
version = "0.1.0"
description = "Stock extractor"
authors = ["Sev Gassauer-Fleissner <severin.gassauer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
sqlalchemy = "^1.3.15"
connexion = "^2.6.0"
flask_cors = "^3.0.8"
#good_morning = { file = "../good_morning/build/lib/good_morning" }

numpy = "^1.18.2"
pandas = "^1.0.3"
bs4 = "^0.0.1"
pymysql = "^0.9.3"
ConfigParser = "^4.0.2"
mysql-connector = "^2.2.9"
selenium = "^3.141.0"
sqlalchemy_utils = "^0.36.3"
flask_sqlalchemy = "^2.4.1"
flask-bcrypt = "^0.7.1"
flask-restplus = "^0.13.0"
Flask-Migrate = "^2.5.3"
pyjwt = "^1.7.1"
Flask-Script = "^2.0.6"
gunicorn = "^20.0.4"
[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = "^19.10b0"
flask-bcrypt = "^0.7.1"
flask_testing = "^0.8.0"
Flask-Migrate = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
